# Qt-Modula

./: .gitignore  README.md  build_linux.sh  build_macos.command  build_windows.bat  main.py  pyproject.toml
distribution/: README.md
distribution/resources/: module_template.py
distribution/saves/main/: settings.json
packaging/: pyinstaller.spec.in  pyside6-deploy.spec.in
resources/assets/macos/: app_icon.icns
resources/docs/guides/: CONTRIBUTING.md  PYSIDE6_DEPLOY_NUITKA.md  RELEASE_PACKAGING.md
resources/docs/modules/: 00_MODULE_CATALOG.md  CONDITION_GATE.md  HTTP_REQUEST.md  INTERVAL_PULSE.md  JSON_IMPORT.md  LOG_NOTES.md  MARKET_FETCHER.md  NUMBER_INPUT.md  OPTIONS.md  RETRY_CONTROLLER.md  TABLE_BUFFER.md  TABLE_IMPORT.md  TABLE_METRICS.md  TEXT_IMPORT.md  TEXT_INPUT.md  TRIGGER_DEBOUNCE.md  TRIGGER_DELAY.md  TRIGGER_JOIN_N.md  TRIGGER_MAPPER.md  VALUE_CHANGE_GATE.md  VALUE_ROUTER.md  VALUE_SCANNER.md  VALUE_SELECTOR.md  VALUE_VIEW.md
resources/docs/platform/: ARCHITECTURE.md  PLUGIN_INTERFACE.md  RUNTIME_CONTRACTS.md  SCHEMA_REFERENCE.md
resources/scripts/: _bootstrap.py  build_distribution.py  generate_app_icons.py  run_benchmarks.py  run_quality_gate.py  run_workflow_sim.py  stage_distribution.py
saves/main/: settings.json
src/qt_modula/: __init__.py  app.py  paths.py
src/qt_modula/benchmarks/: __init__.py  perf.py
src/qt_modula/modules/: __init__.py
src/qt_modula/modules_builtin/: __init__.py  registry.py
src/qt_modula/persistence/: __init__.py  autosnapshot.py  io.py  schemas.py
src/qt_modula/plugins/: __init__.py  loader.py
src/qt_modula/runtime/: __init__.py  engine.py
src/qt_modula/sdk/: __init__.py  async_services.py  background.py  contracts.py  module.py  ui.py  validation.py
src/qt_modula/services/: __init__.py  errors.py  (+6 more)
tests/: conftest.py  test_file_import_services.py  test_file_selector.py  test_import_modules.py
(+94 files in other folders)
